# nlp_dependency_analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notes/: cabocha.ipynb  ginza.ipynb  index.ipynb  janome.ipynb  knp.ipynb  list.ipynb
src/nlp_dependency_analysis/: load_aozora.py  main.py
tests/: test_nlp_dependency_analysis.py
