[tool.poetry]
name = "nlp_dependency_analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.3.0"
pyknp = "^0.6.1"
tqdm = "^4.63.0"
joblib = "^1.1.0"
ginza = "^5.1.0"
ja-ginza = "^5.1.0"
ja-ginza-electra = "^5.1.0"
papermill = "^2.3.4"
Janome = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
